# Optim_management

./: .gitignore  CITATION.cff  HISTORY.rst  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
docs/source/: HISTORY.rst  conf.py  index.rst  installation.rst  introduction.rst  usage.rst
src/Optim_sowingDate/: optimize.py  sortie.netcdf
src/optim_management/: analysis.py  cmd.py  optimizer.py
src/optim_sowingdate/: cmd.py  optimizer.py
tests/: __init__.py  test_optimze.py
