
[build-system]
requires = ["setuptools", "wheel"]

[tool.portray]
modules = ["optim_sowingdate"]

[tool.poetry]
name = "optim_sowingdate"
description = "A package to optimize sowing date from estimated yield time series"
version = "1.1.0"
authors = ["LIMA CIRAD <cyrille_ahmed.midingoyi@cirad.fr>"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/cropmodelingplatform/Optima_sowingDate"
documentation = "https://Optima_sowingDate.readthedocs.io"

[tool.portray.mkdocs.theme]
name = "readthedocs"
palette = {primary = "green", accent = "pink"}

[tool.portray.mkdocs.theme.icon]
repo='fontawesome/brands/gitlab'

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[options]
install_requires = [
    "pandas",
    "PyYAML",
    "xarray",
    "netCDF4",
    "numpy"
]

[project.scripts]
optim_sowingdate = "optim_sowingdate.cmd:cli"