
[build-system]
requires = ["setuptools", "wheel"]

[tool.portray]
modules = ["optim_sowingdate"]

[project]
name = "optim_sowingdate"
version = "1.1.0"

[tool.poetry]
name = "optim_sowingdate"
description = "A package to optimize sowing date from estimated yield time series"
version = "1.1.0"
authors = ["LIMA CIRAD <cyrille_ahmed.midingoyi@cirad.fr>"]
license = "MIT"
maintainers = ["LIMA CIRAD <cyrille_ahmed.midingoyi@cirad.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^5.0.0"
numpy = "^1.26.4"
xarray = "^2024.2.0"
pathlib = "^1.0.1"
pandas  = "^2.2.1"
netCDF4 = "^1.6.5"
click  = "^8.1.7"


[project.urls]
Homepage = "https://github.com/cropmodelingplatform/Optima_sowingDate"
documentation = "https://Optima_sowingDate.readthedocs.io"

[tool.portray.mkdocs.theme]
name = "readthedocs"
palette = {primary = "green", accent = "pink"}

[tool.portray.mkdocs.theme.icon]
repo='fontawesome/brands/gitlab'

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[project.scripts]
optim_sowingdate = "optim_sowingdate.cmd:cli"
